# RInstaller

./: .editorconfig
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  certstore.cpp  client.cpp  mbedtlsmem.cpp  mbedtlsmgr.cpp
src/common/include/: certstore.h  client.h  mbedtlsmem.h  mbedtlsmgr.h  protocol.h  server.h
src/common/interface/: globals.hpp
src/server/: CMakeLists.txt  main.cpp
